# backend/src/controllers/index.js
@@ -2,3 +2,4 @@ export { AuthController } from './auth/auth.controller.js'
 export { UserController } from './user/user.controller.js'
 export { CompanyController } from './company/company.controller.js'
 export { ApplicationController } from './application/application.controller.js'
+export { DashboardController } from './dashboard/dashboard.controller.js'
