# backend/src/routes/index.js
@@ -3,6 +3,7 @@ import { usersRouter } from './user/user.routes.js'
 import { authRouter } from './auth/auth.routes.js'
 import { applicationsRouter } from './application/application.routes.js'
 import { companiesRouter } from './company/company.routes.js'
+import { dashboardRouter } from './dashboard/dashboard.routes.js'
 
 const api = Router()
 
@@ -10,5 +11,6 @@ api.use('/users', usersRouter)
 api.use('/auth', authRouter)
 api.use('/applications', applicationsRouter)
 api.use('/companies', companiesRouter)
+api.use('/dashboard', dashboardRouter)
 
 export { api }
