# backend/src/schemas/index.js
@@ -1,2 +1,3 @@
 export { createUserSchema } from './user/user.schema.js'
 export { createApplicationSchema, updateApplicationSchema } from './application/application.schema.js'
+export { getMetricsSchema } from './dashboard/dashboard.schema.js'
