# backend/src/validators/dashboard/index.js
@@ -1,0 +1,1 @@
+export { validateGetMetrics } from './dashboard.validator.js'
