# backend/src/validators/index.js
@@ -1,2 +1,3 @@
 export { validateCreateUser } from './user/user.validator.js'
 export { validateCreateApplication, validateUpdateApplication } from './application/application.validator.js'
+export { validateGetMetrics } from './dashboard/dashboard.validator.js'
